improve the user interface of the profile page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.8
   curved_navigation_bar: ^1.0.1
+  salomon_bottom_bar: ^3.1.0
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
