--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   curved_navigation_bar: ^1.0.1
   salomon_bottom_bar: ^3.1.0
   font_awesome_flutter: ^9.2.0
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
